# ha-inworld-tts

./: .devcontainer.json  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml  sync_manifest.py
.github/workflows/: lint.yml  release.yml
custom_components/inworld_tts/: __init__.py  config_flow.py  const.py  manifest.json  services.yaml  tts.py
custom_components/inworld_tts/translations/: en.json
scripts/: check_manifest_consistency.py  sync_manifest.py
